Improved contrast issue

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,8 @@ body {
     
 
     /* From https://css.glass */
-background: rgba(68, 167, 196, 0.2);
+background-color:rgb(122, 170, 189,0.5);
+/* background: rgba(68, 167, 196, 0.2); */
 border-radius: 16px;
 box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 backdrop-filter: blur(5px);
@@ -38,7 +39,7 @@ form > label, input, button {
 }
 form > label {
     font-size:x-large;
-    color:floralwhite;
+    color:rgb(14, 13, 13);
 }
 form > input {
     border: 1px solid wheat;
@@ -79,7 +80,7 @@ form > button:hover {
     border: 1px solid rgb(245, 247, 248);
     border-radius: 15px;
     background-color:grey,rgba(68, 167, 196, 0.01);
-    color: beige;
+    color: rgb(7, 7, 7);
     width: auto;
     height: 25px;
     padding: 15px;
@@ -87,12 +88,12 @@ form > button:hover {
     font-weight: bolder;
 }
 h1,h2 {
-    color: cornsilk;
+    color: rgb(8, 8, 8);
     letter-spacing: 3px;
 }
 body > p {
     text-align: center;
-    color:cornsilk;
+    color:rgb(7, 7, 7);
     /* margin: auto; */
 }
 /* @media (max-width:375px) {
